API key removida

--- a/practica6/practica6.html
+++ b/practica6/practica6.html
@@ -58,7 +58,7 @@ getTweets();
             });
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbAeuaWuXakhQX3hjPzp-Y-64lNpK05pc&callback=mapa" async defer></script>
+    <!-- API key removida por seguridad -->
     
 </body>
 </html>
